Fix strange overlapping with fixed bottom:0 element

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,6 +39,7 @@ noscript h1 {
 
 .credit {
   display: block;
+  position: relative;
   padding: 10%;
   text-align: center;
   color: #333;
@@ -311,7 +312,6 @@ noscript h1 {
   overflow: hidden;
   font-size: 1.3rem;
   padding: 10px 5px;
-  /*border-right: 1px solid #fff;*/
   border-right: 1px solid hsla(0, 0%, 100%, 0.3);
 }
 
